--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <title>Document</title>
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet" />
-  <script type="module" crossorigin src="/assets/index.78a840d2.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.cd7509fb.js">
-    <link rel="stylesheet" href="/assets/index.76ebaab1.css">
+  <script type="module" crossorigin src="/tailwind-css/assets/index.78a840d2.js"></script>
+    <link rel="modulepreload" href="/tailwind-css/assets/vendor.cd7509fb.js">
+    <link rel="stylesheet" href="/tailwind-css/assets/index.76ebaab1.css">
   </head>
 
 <body class="bg-gray-200">
